# schema-translator

./: .env.example  .gitignore  COMPLETE_SYSTEM_FLOW.md  CONTRIBUTING.md  DEMO_QUERIES.md  DEPLOYMENT_GUIDE.md  FINAL_PUSH_COMMAND.md  GITHUB_DEPLOYMENT.md  GITHUB_PUSH_STEPS.md  PROJECT_STRUCTURE.md  PUSH_NOW.sh  Procfile  QUICK_DEPLOY.md  QUICK_START.sh  README.md  RENDER_FREE_TIER_LIMITATIONS.md  RENDER_PYTHON_FIX.md  RENDER_PYTHON_FIX_FINAL.md  RENDER_START_COMMAND.md  RENDER_WSGI_SETUP.md  SETUP_GUIDE.md  TEST_RESULTS.md  TIMEOUT_FIX.md  api_server.py  canonical_schema.yaml  canonical_schema_original.yaml  gunicorn_config.py  pyproject.toml  railway.json  render.yaml  requirements.txt  setup.py  web_dashboard.py
.github/workflows/: deploy.yml  railway-deploy.yml
config/: server_config.yaml  tenant_config.yaml
customer_schemas/tenant_A/: schema.yaml
customer_schemas/tenant_B/: schema.yaml
customer_schemas/tenant_C/: schema.yaml
customer_schemas/tenant_D/: schema.yaml
prompts/: column_mapping_v1.txt  nl_to_sql_prompts.py  query_translation_prompts.py
scripts/: import_csv_to_duckdb.py
src/: download_tenants.py
src/app/: __init__.py  cli.py  (+1 more)
templates/: architecture.html  base.html  cache_status_component.html  dashboard.html  hitl.html  llm_logs.html  nl_query_progressive.html  nl_to_sql_query.html  query_translation.html  query_translation_advanced.html  query_translation_advanced_v2.html  reports.html  schema_analysis.html  schema_comparison.html  simple_nl_query.html  testing.html  unified_dashboard.html
tests/: __init__.py  test_discovery.py
(+23 files in other folders)
